Fix game type button spacing

--- a/resources/style.css
+++ b/resources/style.css
@@ -86,6 +86,11 @@ body {
   justify-content: center;
 }
 
+
+.button-spacer {
+  margin: 0 10px;
+}
+
 .button {
   border: 2px solid dodgerblue;
   background-color: white;
@@ -116,9 +121,6 @@ body {
   color: dodgerblue;
 }
 
-.stats {
-
-}
 form {
   background-color: white;
   display: flex;
